--- a/templates/mgmt_cnf.erb
+++ b/templates/mgmt_cnf.erb
@@ -1,19 +1,19 @@
-### File managed with puppet ### 
-## Served by:        '<%= scope.lookupvar('::servername') %>' 
-## Module:           '<%= scope.to_hash['module_name'] %>' 
+### File managed with puppet ###
+## Served by:        '<%= scope.lookupvar('::servername') %>'
+## Module:           '<%= scope.to_hash['module_name'] %>'
 ## Template source:  'MODULES<%= template_source.gsub(Regexp.new("^#{Puppet::Node::Environment.current[:modulepath].gsub(':','|')}"),"") %>'
 [client]
-  user = <%= user %>
-  password = <%= password %>
+  user = <%= @user %>
+  password = <%= @password %>
 
 [mysql]
-  user = <%= user %>
-  password = <%= password %>
+  user = <%= @user %>
+  password = <%= @password %>
 
 [mysqldump]
-  user = <%= user %>
-  password = <%= password %>
+  user = <%= @user %>
+  password = <%= @password %>
 
 [mysqladmin]
-  user = <%= user %>
-  password = <%= password %>
+  user = <%= @user %>
+  password = <%= @password %>
