--- a/templates/mgmt_cnf.erb
+++ b/templates/mgmt_cnf.erb
@@ -1,7 +1,7 @@
 ### File managed with puppet ###
 ## Served by:        '<%= scope.lookupvar('::servername') %>'
 ## Module:           '<%= scope.to_hash['module_name'] %>'
-## Template source:  'MODULES<%= template_source.gsub(Regexp.new("^#{Puppet::Node::Environment.current[:modulepath].gsub(':','|')}"),"") %>'
+## Template source:  'MODULES<%= template_source.gsub(Regexp.new("^#{Puppet.lookup(:current_environment)[:modulepath].gsub(':','|')}"),"") %>'
 [client]
   user = <%= @user %>
   password = <%= @password %>
